added portals and fixed images show

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="mobile-menu-modal"></div>
+    <div id="image-modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
